Feature/acp 2626/master stripe marketplace payment flow marketplace oms workflow transfers to merchants (#2)
* ACP-2626 Extracted Payment to AppPayment package.
* ACP-3419 Sent AddPaymentMethod message always except when AppConfig is in state disconnected.
* ACP-2626 Extract configurationValidation to AppKernel.
