# src/Spryker/Glue/AppPaymentBackendApi/Mapper/Payment/GlueRequestPaymentMapper.php
@@ -9,13 +9,14 @@ namespace Spryker\Glue\AppPaymentBackendApi\Mapper\Payment;
 
 use Generated\Shared\Transfer\GlueRequestTransfer;
 use Generated\Shared\Transfer\InitializePaymentRequestTransfer;
+use Generated\Shared\Transfer\PaymentTransmissionsRequestTransfer;
 use GuzzleHttp\RequestOptions;
 
 class GlueRequestPaymentMapper implements GlueRequestPaymentMapperInterface
 {
- /**
-  * @var string
-  */
+   /**
+    * @var string
+    */
     public const HEADER_TENANT_IDENTIFIER = 'x-tenant-identifier';
 
     public function mapGlueRequestTransferToInitializePaymentRequestTransfer(
@@ -28,5 +29,20 @@ class GlueRequestPaymentMapper implements GlueRequestPaymentMapperInterface
         $initializePaymentRequestTransfer->setTenantIdentifier($metaData[static::HEADER_TENANT_IDENTIFIER][0] ?? ($metaData['x-store-reference'][0] ?? ''));
 
         return $initializePaymentRequestTransfer;
+    }
+
+    public function mapGlueRequestTransferToPaymentTransmissionsRequestTransfer(
+        GlueRequestTransfer $glueRequestTransfer
+    ): PaymentTransmissionsRequestTransfer {
+        $metaData = $glueRequestTransfer->getMeta();
+
+        /** @phpstan-var array<string, mixed> */
+        $requestData = json_decode((string)$glueRequestTransfer->getContent(), true);
+
+        $paymentTransmissionsRequestTransfer = new PaymentTransmissionsRequestTransfer();
+        $paymentTransmissionsRequestTransfer->fromArray($requestData, true);
+        $paymentTransmissionsRequestTransfer->setTenantIdentifier($metaData[static::HEADER_TENANT_IDENTIFIER][0] ?? ($metaData['x-store-reference'][0] ?? ''));
+
+        return $paymentTransmissionsRequestTransfer;
     }
 }
