# src/Spryker/Glue/AppPaymentBackendApi/Mapper/Payment/GlueRequestPaymentMapperInterface.php
@@ -9,10 +9,15 @@ namespace Spryker\Glue\AppPaymentBackendApi\Mapper\Payment;
 
 use Generated\Shared\Transfer\GlueRequestTransfer;
 use Generated\Shared\Transfer\InitializePaymentRequestTransfer;
+use Generated\Shared\Transfer\PaymentTransmissionsRequestTransfer;
 
 interface GlueRequestPaymentMapperInterface
 {
     public function mapGlueRequestTransferToInitializePaymentRequestTransfer(
         GlueRequestTransfer $glueRequestTransfer
     ): InitializePaymentRequestTransfer;
+
+    public function mapGlueRequestTransferToPaymentTransmissionsRequestTransfer(
+        GlueRequestTransfer $glueRequestTransfer
+    ): PaymentTransmissionsRequestTransfer;
 }
